<resources>
    <string name="app_name">Brain Quiz</string>
    <string name="question_title">Question:</string>
    <string name="puzzle_2048">Puzzle 2048</string>
    <string name="moved_puzzle">Moved</string>
    <string name="time">Time</string>
    <string name="refresh">Refresh</string>
    <string name="play_game">How to play game</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="support_us">Support us</string>
    <string name="game_soon">New games are coming soon!</string>
    <string name="puzzle_15">Puzzle 15</string>
    <string name="hard_math">Hard Math</string>
    <string name="quick_math">Quick Math</string>
    <string name="yes_no">True/False</string>
    <string name="math_sort">Math Sort</string>
    <string name="table_of_grow">Table Of Grow</string>
    <string name="input_math">Input Math</string>
    <string name="help">Help</string>
    <string name="check">Check</string>
    <string name="best">Best</string>
    <string name="score">Score</string>
    <string name="moved">Moved</string>
    <string name="result">Result</string>
    <string name="your_result">Your result</string>
    <string name="good_job">Good Job</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="game_over">GAME OVER</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="retry_game">Do you want to play again?</string>
    <string name="current">Current</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="about_us">About Us</string>
    <string name="app_version">Version:1.1</string>
    <string name="developer">Developer from Isoqov Jamshid</string>
    <string name="change_image">Change Image</string>
    <string name="choose_image_text">The image that appears in the main screen</string>
    <string name="your_name">Your Name</string>
    <string name="change_name">Change Name</string>
    <string name="paying_music">Playing game time play music</string>
    <string name="music">Music</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
</resources>