<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".presentation.ui.input_math.screens.InputMathFragment">

    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_time"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_timer" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/image_time"
            android:textSize="18sp"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            tools:text="Question:10" />

    </RelativeLayout>

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_horizontal_sorted_math"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintWidth_percent="0.9"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/main_color"
        app:progressView_colorProgress="@color/progress_color"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSpace="10dp"
        app:progressView_labelText="Time"
        app:progressView_labelTypeface="bold"
        app:progressView_max="100"
        app:progressView_padding="1dp"
        app:progressView_progress="100"
        app:progressView_progressFromPrevious="true"
        app:progressView_radius="12dp" />

    <TextView
        android:id="@+id/tv_question_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/tv_answer"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_horizontal_sorted_math"
        tools:text="1-3*5+17=" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_question_input"
        app:layout_constraintTop_toBottomOf="@+id/progress_horizontal_sorted_math"
        tools:text="\?" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_check"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_1" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_2" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_4" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_5" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_7" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_8" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/btn_minus"
                style="@style/CustomButtonStyle"
                android:text="@string/minus"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/CustomButtonStyle"
                android:text="@string/_0" />

            <ImageView
                android:id="@+id/image_delete"
                style="@style/CustomButtonStyle"
                android:padding="28dp"
                android:src="@drawable/ic_delete"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_header"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>