<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".presentation.ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/app_name"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/image_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_image_header_effect"
            android:contentDescription="@string/settings"
            android:padding="8dp"
            android:src="@drawable/ic_settings" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/image_play"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bg_header"
        android:padding="16dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/play_game" />

    <ImageView
        android:id="@+id/image_support"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_header"
        android:contentDescription="@string/support_us"
        android:padding="20dp"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_play"
        app:layout_constraintVertical_bias="0.7" />


    <ImageView
        android:id="@+id/image_share"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_header"
        android:contentDescription="@string/share"
        android:padding="20dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@id/image_support"
        app:layout_constraintEnd_toStartOf="@id/image_menu"
        app:layout_constraintStart_toEndOf="@id/image_support" />


    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_header"
        android:contentDescription="@string/menu"
        android:padding="20dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@id/image_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_share" />

</androidx.constraintlayout.widget.ConstraintLayout>