<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/bg_color"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/winner" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/retry_game"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_header"
                android:text="@string/no" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_header"
                android:text="@string/yes" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>