<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/bg_color"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/change_name"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="#EDEDED"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#EDEDED"
            android:textSize="16sp"
            tools:ignore="LabelFor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_header"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>